<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="next_button">NEXT</string>
    <string name="prev_button">PREV</string>

    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_nepal">Mount Everest is located on the border of Nepal and China.</string>
    <string name="question_japan">Tokyo is the capital of Japan.</string>
    <string name="question_africa">Africa is the largest continent in the world.</string>
    <string name="question_pacific">The Pacific Ocean is the largest ocean on Earth.</string>

    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>

    <string name="cheat_button">CHEAT</string>
    <string name="show_answer_button">SHOW ANSWER</string>
    <string name="true_text">TRUE</string>
    <string name="false_text">FALSE</string>
    <string name="judgment_toast">Cheating is wrong</string>
</resources>